--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Nunito);
+@import url('https://fonts.googleapis.com/css2?family=Sarabun:wght@200;300;500&display=swap');
 @charset "UTF-8";
 
 /*!
@@ -35,8 +35,8 @@
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
-  --font-family-sans-serif: "Nunito", sans-serif;
-  --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  --font-family: 'Sarabun', sans-serif;
+  --font-family: 'Sarabun', sans-serif;
 }
 
 *,
@@ -67,7 +67,7 @@ section {
 
 body {
   margin: 0;
-  font-family: "Nunito", sans-serif;
+  font-family: 'Sarabun', sans-serif;
   font-size: 0.9rem;
   font-weight: 400;
   line-height: 1.6;
@@ -195,7 +195,7 @@ pre,
 code,
 kbd,
 samp {
-  font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  font-family: 'Sarabun', sans-serif;
   font-size: 1em;
 }
 
@@ -6375,7 +6375,7 @@ a.close.disabled {
   z-index: 1070;
   display: block;
   margin: 0;
-  font-family: "Nunito", sans-serif;
+  font-family: 'Sarabun', sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.6;
@@ -6500,7 +6500,7 @@ a.close.disabled {
   z-index: 1060;
   display: block;
   max-width: 276px;
-  font-family: "Nunito", sans-serif;
+  font-family: 'Sarabun', sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.6;
@@ -10559,7 +10559,7 @@ button.bg-dark:focus {
 }
 
 .text-monospace {
-  font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !important;
+  font-family: 'Sarabun', sans-serif !important;
 }
 
 .text-justify {
